Add 3 files and unify contents according to Wei's last piece

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link href="vendor/bootstrap/theme.css" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet">
-
+    <link href="css/course-landing/course-landing.css" rel="stylesheet"/>
 
     <script src="js/vendor/jquery-3.1.1.min.js"></script>
     <script src="js/vendor/jquery-ui.min.js"></script>
