Add service and curriculum controller, fixed add curriculum chapter function

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,22 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/course-landing/course-landing.css" rel="stylesheet"/>
 
+    <!--<script src="js/vendor/jquery-3.1.1.min.js"></script>-->
+    <!--<script src="js/vendor/jquery-ui.min.js"></script>-->
+    <!--<script src="js/bootstrap.js"></script>-->
+
+    <!--<script src="js/angular.js"></script>-->
+    <!--<script src="js/angular-route.js"></script>-->
+    <!--<script src="js/ng-rateit.js"></script>-->
+    <!--<script src='js/vendor/textangular/textAngular-rangy.min.js'></script>-->
+    <!--<script src='js/vendor/textangular/textAngular-sanitize.min.js'></script>-->
+    <!--<script src='js/vendor/textangular/textAngular.min.js'></script>-->
+    <!--<script src='js/bootstrap.js'></script>-->
+
+
+
+
+
     <script src="js/vendor/jquery-3.1.1.min.js"></script>
     <script src="js/vendor/jquery-ui.min.js"></script>
     <script src="js/bootstrap.js"></script>
@@ -30,7 +46,19 @@
     <script src="vendor/angular-ui-bootstrap/ui-bootstrap.js"></script>
     <script src="vendor/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
 
+    <script src="app.js"></script>
+    <script src="config.js"></script>
 
+    <!--<script src="views/user/controller/login.controller.js"></script>-->
+    <!--<script src="views/user/controller/register.controller.js"></script>-->
+    <!--<script src="views/user/controller/profile.controller.js"></script>-->
+    <!--<script src="views/services/user.service.client.js"></script>-->
+
+    <script src="vendor/angular-ui-bootstrap/ui-bootstrap.js"></script>
+    <script src="vendor/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
+    <!--Instructor course editing -->
+    <script src="views/services/course.service.client.js"></script>
+    <script src="views/course/course-edit/controller/course.controller.client.js"></script>
 
 </head>
 <body>
@@ -41,28 +69,6 @@
 
 <!-------------------------  Loading other js files --------------------------------------------------------   -->
 
-<script src="js/vendor/jquery-3.1.1.min.js"></script>
-<script src="js/vendor/jquery-ui.min.js"></script>
-<script src="js/bootstrap.js"></script>
-
-<script src="js/angular.js"></script>
-<script src="js/angular-route.js"></script>
-<script src="js/ng-rateit.js"></script>
-<script src='js/vendor/textangular/textAngular-rangy.min.js'></script>
-<script src='js/vendor/textangular/textAngular-sanitize.min.js'></script>
-<script src='js/vendor/textangular/textAngular.min.js'></script>
-<script src='js/bootstrap.js'></script>
-
-<script src="vendor/angular-ui-bootstrap/ui-bootstrap.js"></script>
-<script src="vendor/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
-
-<script src="app.js"></script>
-<script src="config.js"></script>
-
-<script src="views/user/controller/login.controller.js"></script>
-<script src="views/user/controller/register.controller.js"></script>
-<script src="views/user/controller/profile.controller.js"></script>
-<script src="views/services/user.service.client.js"></script>
 
 
 </body>
