--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,14 @@
 <script src="views/services/user.service.client.js"></script>
 
 
+<script src="views/course/course-edit/controllers/landing.controller.client.js"></script>
+<script src="views/course/course-edit/controllers/general.controller.client.js"></script>
+<script src="views/course/course-edit/controllers/course-new.controller.client.js"></script>
+<script src="views/course/course-edit/controllers/learningaims.controller.client.js"></script>
+<script src="views/course/course-edit/controllers/learningaims-new.controller.client.js"></script>
+<script src="views/course/course-edit/controllers/requirements.controller.client.js"></script>
+<script src="views/course/course-edit/controllers/requirements-new.controller.client.js"></script>
+
 </body>
 </html>
 
