Add profile controller

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
     <!--Instructor course editing -->
     <script src="views/services/course.service.client.js"></script>
     <script src="views/course/course-edit/controller/course.controller.client.js"></script>
+    <script src="views/course/course-edit/controller/profile.instructor.controller.client.js"></script>
 
 </head>
 <body>
