Add two new controllers

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     <script src="views/services/course.service.client.js"></script>
     <script src="views/course/course-edit/controller/course.controller.client.js"></script>
     <script src="views/course/course-edit/controller/profile.instructor.controller.client.js"></script>
-
+    <script src="views/course/course-edit/controller/reviews.instructor.controller.client.js"></script>
 </head>
 <body>
 
