--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
 <script src="views/user/controller/login.controller.js"></script>
 <script src="views/user/controller/register.controller.js"></script>
 <script src="views/user/controller/profile.controller.js"></script>
+<script src="views/section/section.controller.js"></script>
 <script src="views/services/user.service.client.js"></script>
 
 
