--- a/public/index.html
+++ b/public/index.html
@@ -49,10 +49,10 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
 
-    <!--<script src="views/user/controller/login.controller.js"></script>-->
-    <!--<script src="views/user/controller/register.controller.js"></script>-->
-    <!--<script src="views/user/controller/profile.controller.js"></script>-->
-    <!--<script src="views/services/user.service.client.js"></script>-->
+    <script src="views/user/controller/login.controller.js"></script>
+    <script src="views/user/controller/register.controller.js"></script>
+    <script src="views/user/controller/profile.controller.js"></script>
+    <script src="views/services/user.service.client.js"></script>
 
     <script src="vendor/angular-ui-bootstrap/ui-bootstrap.js"></script>
     <script src="vendor/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
